2006-06-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus.el (gnus-valid-select-methods): Revert last change for nnweb.
	It didn't really fix the bogosity I'm seeing with solid web groups.

2006-06-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus.el (gnus-valid-select-methods): Declare nnweb with 'address.
	Since revision 6.95 (2003-01-05) of gnus-group.el, solid web groups are
	created using server names.  If we use the feature without declaring
	it, Gnus does not properly manage server and group state.

	* nnweb.el (nnweb-google-search): Respect nnweb-max-hits as upper
	bound.

2006-06-25  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* gnus.el (gnus-find-method-for-group): On killed/unknown groups, try
	looking up the method using GROUP's prefix before inventing a new one.
	It is used on killed/unknown groups in various places where returning
	an all-new method isn't expected by the caller.

	* gnus-util.el (gnus-group-server): Fix for empty virtual server names
	and match semantics of gnus-group-real-prefix.

2006-06-22  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-broken-references-mailers): New variable.
	(nnmail-ignore-broken-references): New function generalizing
	nnmail-fix-eudora-headers.
	(nnmail-fix-eudora-headers): Now obsolete.

	* gnus-art.el (gnus-button-handle-custom): Support
	`customize-apropos*'.

2006-06-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-hide-headers): Inhibit read-only stuff.

	* gnus-group.el (gnus-fetch-group): Document ARTICLES and select those
	articles.

2006-06-21  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-cite-reply-above): New variable.
	(message-yank-original): Use it.

2006-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-parse-string): Allow `*'s in parameter values.

2006-06-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-bookmark.el (gnus-bookmark-jump): Don't mark unrelated articles
	as read.
