@@ -1,3 +1,8 @@
+2006-06-26  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus-util.el (kill-empty-logs, gnus-byte-compile): Remove anonymous
+	2006-04-22 contribution.
+
 2006-06-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>
 
 	* gnus.el (gnus-valid-select-methods): Revert last change for nnweb.
